scripts/nullness/wpi/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8.txt
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:47: error: (dereference.of.nullable) $$ 1 $$ this.NotificationEmprunts $$ ( 948, 973 ) $$ dereference of possibly-null reference this.NotificationEmprunts
		if(!this.NotificationEmprunts.contains(emprunt))
		        ^
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/emprunt/Emprunt.java:96: error: (dereference.of.nullable) $$ 1 $$ this.media.getCours().getProf() $$ ( 1639, 1670 ) $$ dereference of possibly-null reference this.media.getCours().getProf()
			this.media.getCours().getProf().addAlerteEmprunt(this);
			                             ^
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Cours.java:106: error: (dereference.of.nullable) $$ 1 $$ prof $$ ( 1657, 1661 ) $$ dereference of possibly-null reference prof
		res += "enseignant : " + prof.getNom() + "\n";
		                         ^
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Projet.java:115: error: (dereference.of.nullable) $$ 1 $$ etudiants $$ ( 1842, 1851 ) $$ dereference of possibly-null reference etudiants
		for (int i = 0; i < etudiants.size(); i++)
		                    ^
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Etudiant.java:34: error: (dereference.of.nullable) $$ 1 $$ empruntConcerne $$ ( 763, 778 ) $$ dereference of possibly-null reference empruntConcerne
		empruntConcerne.setCommentaire(com);
		^
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Stage.java:78: error: (dereference.of.nullable) $$ 1 $$ projet.getEtudiants() $$ ( 1109, 1130 ) $$ dereference of possibly-null reference projet.getEtudiants()
		for (int i = 0; i < projet.getEtudiants().size(); i++)
		                                       ^
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurProjet.java:161: error: (dereference.of.nullable) $$ 1 $$ Bdd.listProjets.get(indexProjet).getEtudiants() $$ ( 3849, 3896 ) $$ dereference of possibly-null reference Bdd.listProjets.get(indexProjet).getEtudiants()
		Bdd.listProjets.get(indexProjet).getEtudiants().add(etudiant);
		                                             ^
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurProjet.java:183: error: (dereference.of.nullable) $$ 1 $$ projet.getEtudiants() $$ ( 4518, 4539 ) $$ dereference of possibly-null reference projet.getEtudiants()
		while (indexEtudiantProjet < projet.getEtudiants().size() && etudiant == null) {
		                                                ^
../original/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurProjet.java:195: error: (dereference.of.nullable) $$ 1 $$ Bdd.listProjets.get(indexProjet).getEtudiants() $$ ( 4884, 4931 ) $$ dereference of possibly-null reference Bdd.listProjets.get(indexProjet).getEtudiants()
		Bdd.listProjets.get(indexProjet).getEtudiants().remove(indexEtudiantProjet);
		                                             ^
9 errors
